--- a/Client/BlazorApp/Pages/Android.razor
+++ b/Client/BlazorApp/Pages/Android.razor
@@ -12,7 +12,7 @@
 <head>
 
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
-  
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -114,7 +114,7 @@
 
     .input-group {
         /*  position: fixed;
-            top: 50px; /* Adjust as needed */
+                top: 50px; /* Adjust as needed */
         left: 50%;
         transform: translateX(-50%);
         z-index: auto; /* Ensure the search bar is above the table */
@@ -123,7 +123,6 @@
         border-radius: 50px;
         border-radius: 0 0 0 0;
         margin-bottom: 1px;
-        */
     }
 
     .btn-clear i {
@@ -169,7 +168,7 @@
             border: none
         }
 
-    .dropdown-toggle.btn-secondary: {
+    .dropdown-toggle.btn-secondary {
         background-color: white;
         border-color: None;
         color: lightblue;
@@ -269,7 +268,9 @@
                     @*                     <tr @onclick="@( () => DisplayOption(person) )">
 
             *@
-                    <tr @onclick="@( () => DisplayOption(person) )">
+                    @*                     <tr @onclick="@( () => DisplayOption(person) )">
+            *@
+                    <tr>
                         <td>@person.Nachname</td>
                         <td>@person.Vorname</td>
                         <!-- Add other table data here -->
@@ -283,16 +284,16 @@
 }
 
 
-@if (_PersonList == null)
+@if (PersonList == null)
 {
     <p>Loading...</p>
 }
 else
 {
-     <div class="table-responsive">
+    <div class="table-responsive">
         <table class="table">
             <tbody>
-                @foreach (var person in _PersonList)
+                @foreach (var person in PersonList)
                 {
                     <div class="person-item" @onclick="@(() => DisplayDetails(person.Id))">
 
@@ -301,25 +302,27 @@ else
                             <span class="person-nachname">@person.Nachname</span>
                         </div>
 
-                            @* @foreach (var telefonnummer in person.PersonNummern)
-            {
-            <div>@telefonnummer.TelNummer</div>
-            } *@
-
-                            @if (person.PersonNummern.Any())
+                        @* @foreach (var telefonnummer in person.PersonNummern)
+                {
+                <div>@telefonnummer.TelNummer</div>
+                } *@
+                        @if (person.PersonNummern.Any())
+                        {
+                            var firstNumber = person.PersonNummern.First()?.TelNummer;
+                            if (person.PersonNummern.Count > 1)
                             {
-                                var firstNumber = person.PersonNummern.First().TelNummer;
-                                if (person.PersonNummern.Count > 1)
+                                var secondNumber = person.PersonNummern.ElementAtOrDefault(1)?.TelNummer;
+                                if (!string.IsNullOrEmpty(secondNumber))
                                 {
-                                    var secondNumber = person.PersonNummern[1].TelNummer.Substring(0, Math.Min(5, person.PersonNummern[1].TelNummer.Length));
-                            <div>@firstNumber<br />@secondNumber...</div>
-                                }
-                                else
-                                {
-                            <div>@firstNumber</div>
+                                    secondNumber = secondNumber.Substring(0, Math.Min(5, secondNumber.Length));
+                                    <div>@firstNumber /*** @secondNumber</div>
                                 }
                             }
-
+                            else
+                            {
+                                <div>@firstNumber</div>
+                            }
+                        }
 
                         <div class="divider"></div>
                     </div>
@@ -348,23 +351,23 @@ else
 
 
 
-    List<PersonModel> _PersonList;
+    List<PersonModel>? PersonList;
 
     private string searchText = string.Empty;
-    private List<PersonModel> allPersons;
-    private List<PersonModel> searchResults;
+    private List<PersonModel>? allPersons;
+    private List<PersonModel>? searchResults;
 
     protected override async Task OnInitializedAsync()
     {
         allPersons = await PersonService.GetAllPersonsList();
 
-        _PersonList = await PersonService.GetAllPersonsList();
+        PersonList = await PersonService.GetAllPersonsList();
 
     }
 
     private void HandleSearchTextChanged(ChangeEventArgs e)
     {
-        searchText = e.Value.ToString();
+        searchText = e.Value?.ToString() ?? string.Empty;
         HandleSearch();
     }
 
@@ -372,12 +375,12 @@ else
     {
         if (!string.IsNullOrWhiteSpace(searchText))
         {
-            searchResults = allPersons
+            searchResults = allPersons?
             // .Where(person => person.Nachname.Contains(searchText) || person.Vorname.Contains(searchText))
             // .ToList();
             .Where(person =>
-            person.Nachname.IndexOf(searchText, StringComparison.OrdinalIgnoreCase) >= 0
-            || person.Vorname.IndexOf(searchText, StringComparison.OrdinalIgnoreCase) >= 0)
+            person.Nachname?.IndexOf(searchText, StringComparison.OrdinalIgnoreCase) >= 0
+            || person.Vorname?.IndexOf(searchText, StringComparison.OrdinalIgnoreCase) >= 0)
             .ToList();
         }
         else
@@ -439,27 +442,27 @@ else
         }
     }
 
-    private async void DisplayOption(PersonModel personDetail)
-    {
+    // private async void DisplayOption(PersonModel personDetail)
+    // {
 
-        //     // var response = await App.Current.MainPage.DisplayActionSheet("Select Option", "Ok", null, "Update Contact", "Delete Contact");
+    //     //     // var response = await App.Current.MainPage.DisplayActionSheet("Select Option", "Ok", null, "Update Contact", "Delete Contact");
 
-        //     // if (response == "Update Contact")
+    //     //     // if (response == "Update Contact")
 
-        //     // {
-        //     //     NavManager.NavigateTo($"updatePerson/{personDetail.Id}");
+    //     //     // {
+    //     //     //     NavManager.NavigateTo($"updatePerson/{personDetail.Id}");
 
-        //     // }
-        //     // else if (response == "Delete Contact")
+    //     //     // }
+    //     //     // else if (response == "Delete Contact")
 
-        //     // {
+    //     //     // {
 
-        //     //        DisplayDeleteConfirmation(personDetail.Id);
-
-
+    //     //     //        DisplayDeleteConfirmation(personDetail.Id);
 
 
-    }
+
+
+    // }
 
 
     [Parameter] public EventCallback<bool> OnConfirmation { get; set; }
