--- a/Client/BlazorApp/Shared/MainLayout.razor.css
+++ b/Client/BlazorApp/Shared/MainLayout.razor.css
@@ -1,6 +1,9 @@
+/*<!--MainLayout.razor.css-- >*/
+
 .page {
     display: flex;
     flex-direction: column;
+    z-index: 0;
 }
 
 .main {
@@ -18,33 +21,42 @@
     background-color: #17324D;
     display: block;
     top: 0;
-    z-index: 1;
+    z-index: 3;
     position: sticky;
     height: 100vh;
 }
+    
+
+
+
 
 @media (max-width: 729px) {
 
     .sidebar {
-        width: 100%;
+        width: 100% !important;
         height: fit-content;
+        position: sticky;
         z-index: 2;
     }
 }
 
 
-    @media (min-width: 730px) {
-        .page {
-            flex-direction: row;
-        }
-
-        .sidebar {
-            width: 250px;
-        }
-
-        .article {
-            /* padding-left: 2rem !important;
-        padding-right: 1.5rem !important;*/
-        }
+@media (min-width: 730px) {
+    .page {
+        flex-direction: row;
     }
+
+    .sidebar {
+        width: 100%;
+    }
+
+
+
+    .article {
+        /* padding-left: 2rem !important;
+        padding-right: 1.5rem !important;*/
+    }
+}
+
+
 
