--- a/Client/BlazorApp/Shared/NavMenu.razor.css
+++ b/Client/BlazorApp/Shared/NavMenu.razor.css
@@ -1,5 +1,40 @@
+/*<!--NavMenu.razor.css-- >*/
+
+.container-fluid {
+}
+
+.navbar-brand {
+    justify-content: start;
+}
+
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.hide-show-btn {
+    background-color: greenyellow;
+    height: 30px;
+    width: 30px;
+    justify-content: end;
+}
+
+    .hide-show-btn:hover {
+        cursor: pointer;
+        opacity: 0.9;
+    }
+
+.arrow {
+    transition: var(--transition-props);
+}
+
+    .arrow.reversed {
+        transform: translate(0px, -115px) rotate(180deg);
+        transition: var(--transition-props);
+    }
+
+
+.flex-column {
+    margin-left:5px;
 }
 
 body {
@@ -8,7 +43,8 @@ body {
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #00CC66;
+    font-weight: bold;
 }
 
 .navbar-brand {
@@ -23,8 +59,9 @@ body {
 }
 
 .nav-item {
-    font-size: 0.9rem;
     padding-bottom: 0.5rem;
+    
+   
 }
 
     .nav-item:first-of-type {
@@ -37,39 +74,58 @@ body {
 
     .nav-item ::deep a {
         color: #FFFFFF;
-        font: normal normal normal 15px/28px ;
+        font: normal normal normal 15px/28px;
         border-radius: 4px;
         height: 3rem;
-        display: flex;
         align-items: center;
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
+        .nav-item ::deep a.active {
+/*            background-color: rgba(255,255,255,0.25);
+*/
+          background-color: aqua;
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+            color: #00CC66;
+        }
 
-@media (min-width: 730px) {
-    .navbar-toggler {
+        .nav-item ::deep a:hover {
+            background-color: rgba(255,255,255,0.1);
+            color: white;
+        }
+
+
+
+
+@media (main-width: 730px) {
+    .mav {
+        background-color: red;
+    }
+
+    .nav-text {
         display: none;
     }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
-    
-    .nav-scrollable {
-        /* Allow sidebar to scroll for tall menus */
-        /*height: calc(100vh - 3.5rem);
-        overflow-y: auto;*/
-    }
-
-    
 }
+
+
+    @media (min-width: 730px) {
+        .navbar-toggler {
+            display: none;
+        }
+
+        .collapse {
+            /* Never collapse the sidebar for wide screens */
+            display: block;
+            display: flex !important; /* Override the collapse behavior */
+            flex-direction: column !important; /* Arrange the items vertically */
+        }
+
+        .nav-scrollable {
+            /* Allow sidebar to scroll for tall menus */
+            /*height: calc(100vh - 3.5rem);
+        overflow-y: auto;*/
+        }
+    }
+
+
+
