--- a/Client/MauiBlazorApp/_Imports.razor
+++ b/Client/MauiBlazorApp/_Imports.razor
@@ -8,8 +8,10 @@
 @using MauiBlazorApp.Shared
 
 @using CommonCode.Services
-@using Microsoft.JSInterop
-@using System.Text.Json
+
+@* @using Microsoft.JSInterop
+ *@
+ @using System.Text.Json
 
 
 
