--- a/Client/MauiBlazorApp/Pages/PersonDisplay.razor.css
+++ b/Client/MauiBlazorApp/Pages/PersonDisplay.razor.css
@@ -1,2 +1,40 @@
-﻿body {
+﻿
+.page {
+    background-color: gray;
+    /*         background-color: #1E314B !important;
+ */
 }
+
+.card {
+    margin: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card-body {
+    padding: 20px;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    margin-bottom: 10px;
+}
+
+.list-group-item {
+    padding: 8px 0;
+    border: none;
+}
+
+    .list-group-item:first-child {
+        border-top: none;
+    }
+
+    .list-group-item:last-child {
+        border-bottom: none;
+    }
+
+strong {
+    font-weight: bold;
+}
+
