--- a/Client/MauiBlazorApp/Shared/MainLayout.razor.css
+++ b/Client/MauiBlazorApp/Shared/MainLayout.razor.css
@@ -1,78 +1,62 @@
+/*<!--MainLayout.razor.css-- >*/
+
 .page {
-    position: relative;
     display: flex;
     flex-direction: column;
+    z-index: 0;
 }
 
-main {
-    flex: 1;
+.main {
+    align-items: center; /* Center items vertically */
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: block;
+    z-index: 0;
 }
-
 
 .sidebar {
     /*    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 */
     background-color: #17324D;
     display: block;
+    top: 0;
+    z-index: 3;
+    position: sticky;
+    height: 100vh;
 }
 
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-    }
+@media (max-width: 729px) {
 
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
-
-    .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
+    .sidebar {
+        width: 100% !important;
+        height: fit-content;
+        position: fixed;
+        z-index: 3;
     }
 }
 
-@media (min-width: 641px) {
+
+@media (min-width: 730px) {
     .page {
         flex-direction: row;
     }
 
     .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
+        transition: width 0.3s; /* Add a smooth transition effect */
     }
 
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
 
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
+
+    .article {
+        /* padding-left: 2rem !important;
+        padding-right: 1.5rem !important;*/
     }
+}
+
+/* Style when sidebar width is 50px or ToggleBkColorTriger is triggered */
+
+.sidebar[style*="width: 50px;"] {
+    background-color: red;
 }
