--- a/Client/BlazorApp/Shared/NavMenu.razor
+++ b/Client/BlazorApp/Shared/NavMenu.razor
@@ -1,48 +1,51 @@
 ﻿<!-- NavMenu.razor -->
 
 <div class="top-row ps-3 navbar navbar-dark">
-        <span class="navbar-brand" href="" style="font-size: 15px;">
-            Personal Contact Information
-        </span>
-    <div class="hide-show-btn" @onclick="arrowrev">
-        <svg class="arrow@(arrow ? "" : " reversed")" viewBox="-3 -1 20 100">
-                <polyline points="10,0 0,10 10,20" />
-            </svg>
-        </div>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <span class="navbar-brand" href="" style="font-size: 15px;">
+        Personal Contact Information
+    </span>
+
+    <div class="hide-show-btn" @onclick="TriggerParentMethod!">
+        <svg class="arrow@(arrow ? "" : " reversed")" viewBox="-3 -1 20 100" @onclick="arrowrev">
+            <polyline points="10,0 0,10 10,20" />
+        </svg>
+    </div>
+
+    <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 </div>
 
 <div class="@NavMenuCssClass">
-    <button @onclick="TriggerParentMethod!">
+   @*  <button @onclick="TriggerParentMethod!">
         Collapse
-    </button>
+    </button> *@
+
     <nav class="mav">
         <div class="nav-item ">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" ></span>
+                <span class="oi oi-home"></span>
                 <span class="nav-text"> Personen Liste </span>
             </NavLink>
         </div>
 
         <div class="nav-item ">
             <NavLink class="nav-link" href="contact2" Match="NavLinkMatch.All">
-                <span class="oi oi-home" ></span>
+                <span class="oi oi-home"></span>
                 <span class="nav-text"> Contact List2 </span>
             </NavLink>
         </div>
 
         <div class="nav-item ">
             <NavLink class="nav-link" href="android" Match="NavLinkMatch.All">
-                <span class="oi oi-home" ></span>
+                <span class="oi oi-home"></span>
                 <span class="nav-text"> Name List </span>
             </NavLink>
         </div>
 
         <div class="nav-item ">
             <NavLink class="nav-link" href="addperson">
-                <span class="oi oi-plus" ></span>
+                <span class="oi oi-plus"></span>
                 <span class="nav-text"> Add Person </span>
             </NavLink>
         </div>
@@ -56,7 +59,7 @@
     [Parameter]
     public Action? TriggerParentMethod { get; set; }
 
-   
+
 
     private bool collapseNavMenu = true;
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : "";
