--- a/Client/MauiBlazorApp/Shared/NavMenu.razor.css
+++ b/Client/MauiBlazorApp/Shared/NavMenu.razor.css
@@ -1,5 +1,9 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: transparent;
+}
+
+.navbar-toggler-icon {
+    background-color: transparent;
 }
 
 body {
@@ -8,7 +12,7 @@ body {
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #17324D;
 }
 
 .navbar-brand {
@@ -20,6 +24,7 @@ body {
     font-size: 1.1rem;
     vertical-align: text-top;
     top: -2px;
+    color: white;
 }
 
 .nav-item {
